<resources>
    <string name="app_name">Brejas</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_title_about">About</string>
    <string name="about_title_version">Version</string>
    <string name="about_author_name" translatable="false">Raphael N. Pawlik</string>
    <string name="about_app_version">Version 1.0</string>
    <string name="menu_about">About</string>
    <string name="menu_add_beer">Add Beer</string>
    <string name="add_beer_name">Beer Name</string>
    <string name="add_submit">Add</string>
    <string name="add_brand">Brand</string>
    <string name="add_package_type">Package Type</string>
    <string name="add_package_unit_content">Package Unit Content</string>
    <string name="add_units_in_stock">Units in Stock</string>
    <string name="add_err_name">Fill the Name Field</string>
    <string name="add_err_brand">Fill the field Brand Name</string>
    <string name="add_err_content">Fill the field Content</string>
    <string name="add_err_units">Fill the field Units</string>
    <string name="add_err_pack">Select the package type</string>
    <string name="err_server_connection">Unable to connect to server</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="login_username">Username</string>
    <string name="login_keep_logged">Keep me logged</string>
    <string name="menu_logout">Logout</string>
    <string name="list_beers">List Beers</string>
    <string name="new_edit">Edit</string>
    <string name="new_add">Add</string>
    <string name="add_bottles">" Bottles"</string>
</resources>
