<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_add_beer" />
        <item
            android:checked="true"
            android:id="@+id/list_beers"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/list_beers" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_about" />

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
